--- a/app/.gitignore
+++ b/app/.gitignore
@@ -1,1 +1,34 @@
-/build
+# Built application files
+*.apk
+*.ap_
+/build/
+
+# Local configuration file (gradle.properties)
+/local.properties
+
+# Android Studio files
+.idea/
+
+# Gradle files
+.gradle/
+build/
+
+# Log files
+build.log
+
+# Proguard files
+proguard/
+
+# Navigation directory files
+navigation/
+
+# Test-specific files
+*.iml
+.history/
+.metadata/
+
+# Misc
+/captures/
+/externalNativeBuild/
+
+# Exclude any other files/directories you want
