update fitur-fitur baru

--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon Nov 06 22:53:37 WIB 2023
-sdk.dir=/Users/ahmadrizalk/Library/Android/sdk
+#Sun Nov 12 14:25:32 WIB 2023
+sdk.dir=C\:\\Users\\user\\AppData\\Local\\Android\\Sdk
